--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: > # Recruiter by Day, Beginner Coder by Night
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minima
